immutable answers converted to mutable